# ktext_jenova

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  a.out  benchmark.cpp  benchmark_compare.cpp  benchmark_final.cpp  fix.diff  fix_handoff.py  fix_misses.py  fix_summaries.py  get_editor_views.py  get_kdevelop_docs.py  get_ktexteditor_app.py  get_ktexteditor_app2.py  get_ktexteditor_app3.py  get_ktexteditor_app4.py  helper.cpp  helper2.cpp  test.py  test_editor_views.cpp  test_ktexteditor_app.py  test_loop.cpp  test_loop_nested.cpp  test_loop_nested2.cpp  test_loop_nested3.cpp  test_loop_nested4.cpp  test_register_bulk.cpp  test_register_bulk2.cpp  test_register_bulk3.cpp  test_register_bulk4.cpp  test_register_bulk5.cpp  test_register_bulk6.cpp
.devdocs/: BLUEPRINT.md  BRIEFING.md  DECISIONS_LOG.md  PLANS.md  PROGRESS.md  PROGRESS.md.orig  SESSION_HANDOFF.md  SESSION_HANDOFF.md.orig  SUMMARIES.md  SUMMARIES.md.orig  TESTS.md  TODOS.md  palette.md
.jules/: bolt.md  palette.md  sentinel.md
src/: CMakeLists.txt  KDevLLMPlugin.cpp  jenovaktext.json  jenovaktextui.rc
src/completion/: AiCompletionModel.cpp  AiCompletionModel.h
src/config/: AiConfigPage.cpp  AiConfigPage.h
src/context/: ContextManager.cpp  ContextManager.h
src/network/: LlamaClient.cpp  LlamaClient.h
src/plugin/: AiPlugin.cpp  AiPlugin.h  AiPluginView.cpp  AiPluginView.h
src/tests/: CMakeLists.txt  TestAiChatWidget.cpp  TestAiChatWidget.h  TestCommandTextEdit.cpp
src/ui/: AiChatInputWidget.cpp  AiChatInputWidget.h  AiChatWidget.cpp  AiChatWidget.h  ChatMessageDelegate.cpp  ChatMessageDelegate.h  ChatMessageWidget.cpp  ChatMessageWidget.h
tests/: CMakeLists.txt  MockLlamaClient.h  TestAiChatWidget.cpp  TestAiChatWidget.h  TestAiCompletionModel.cpp  TestAiCompletionModel.cpp.orig  TestCommandTextEdit.cpp  TestContextManager.cpp  TestLlamaClient.cpp
tests/mocks/: KConfigGroup  KSharedConfig
tests/mocks/KTextEditor/: Document  View
tests/mocks/interfaces/: icore.h  iproject.h  iprojectcontroller.h
tests/mocks/language/duchain/: duchain.h  duchainlock.h  duchainutils.h
